fixing some spacing issues

--- a/styles/casestudy.css
+++ b/styles/casestudy.css
@@ -271,7 +271,7 @@ img.beelogo {
   padding-right: 100px;
 }
 
-.one-fourth {
+.one-third {
   width: 33.3%;
   float: left;
 }
